// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar component renders 1`] = `
@media  {
  .c-glwkin {
    background: white;
    position: sticky;
    display: flex;
    align-items: center;
    width: 100vw;
    top: 0;
    z-index: 1;
    border-bottom: 1px solid var(--colors-tonal100);
    transition: box-shadow .2s ease-out;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-ftiHlK {
    align-items: center;
    height: var(--sizes-4);
    margin-left: var(--space-4);
    margin-right: var(--space-4);
    width: 100%;
  }

@media (min-width: 800px) {
    .c-ftiHlK {
      margin-left: var(--space-5);
      margin-right: var(--space-5);
    }
}

  .c-dbEDIJ {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: var(--colors-tonal400);
  }

  .c-dbEDIJ:hover,
  .c-dbEDIJ:focus {
    text-decoration: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-ldsiYK {
    color: var(--colors-tonal400);
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-fNKiiB {
    border: 0;
    background: var(--colors-tonal100);
  }
}

@media  {
  .c-glwkin-daNQNf-size-md {
    height: var(--sizes-6);
  }

  .c-glwkin-daNQNf-size-md .topbar-brand-logo[src$=".svg"] {
    height: 24px;
    width: auto;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-fNKiiB-fKZlxR-orientation-vertical {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-fNKiiB-ieFaPrQ-css {
    height: var(--sizes-2);
    background: var(--colors-tonal100);
  }
}

<body>
  <div
    class="c-glwkin c-glwkin-daNQNf-size-md"
  >
    <div
      class="c-dhzjXW c-ftiHlK"
    >
      <a
        class="c-dbEDIJ"
        href="atomlearning.co.uk"
      >
        <p
          class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-ldsiYK"
        >
          Admin Panel
        </p>
      </a>
      <button
        aria-label="Search"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-PJLV"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.412 14.412 20 20"
          />
          <circle
            cx="10"
            cy="10"
            r="6"
          />
        </svg>
      </button>
      <hr
        class="c-fNKiiB c-fNKiiB-fKZlxR-orientation-vertical c-fNKiiB-ieFaPrQ-css"
      />
      <button
        aria-label="Light/Dark mode"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-PJLV"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7 14a2 2 0 1 1 0-4 2 2 0 0 1 0 4Z"
            fill-rule="evenodd"
          />
          <path
            d="M7 17A5 5 0 0 1 7 7h9a5 5 0 0 1 0 10H7Z"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`TopBar component renders the lg variant 1`] = `
@media  {
  .c-glwkin {
    background: white;
    position: sticky;
    display: flex;
    align-items: center;
    width: 100vw;
    top: 0;
    z-index: 1;
    border-bottom: 1px solid var(--colors-tonal100);
    transition: box-shadow .2s ease-out;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-ftiHlK {
    align-items: center;
    height: var(--sizes-4);
    margin-left: var(--space-4);
    margin-right: var(--space-4);
    width: 100%;
  }

@media (min-width: 800px) {
    .c-ftiHlK {
      margin-left: var(--space-5);
      margin-right: var(--space-5);
    }
}

  .c-dbEDIJ {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: var(--colors-tonal400);
  }

  .c-dbEDIJ:hover,
  .c-dbEDIJ:focus {
    text-decoration: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-ldsiYK {
    color: var(--colors-tonal400);
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-fNKiiB {
    border: 0;
    background: var(--colors-tonal100);
  }
}

@media  {
  .c-glwkin-daNQNf-size-md {
    height: var(--sizes-6);
  }

  .c-glwkin-daNQNf-size-md .topbar-brand-logo[src$=".svg"] {
    height: 24px;
    width: auto;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-fNKiiB-fKZlxR-orientation-vertical {
    height: 100%;
    width: 1px;
    min-height: var(--sizes-3);
  }

  .c-glwkin-lcsdih-size-lg {
    height: var(--sizes-7);
  }

  .c-glwkin-lcsdih-size-lg .topbar-brand-logo[src$=".svg"] {
    height: 32px;
    width: auto;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-fNKiiB-ieFaPrQ-css {
    height: var(--sizes-2);
    background: var(--colors-tonal100);
  }
}

<body>
  <div
    class="c-glwkin c-glwkin-lcsdih-size-lg"
  >
    <div
      class="c-dhzjXW c-ftiHlK"
    >
      <a
        class="c-dbEDIJ"
        href="atomlearning.co.uk"
      >
        <p
          class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-ldsiYK"
        >
          Admin Panel
        </p>
      </a>
      <button
        aria-label="Search"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-PJLV"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.412 14.412 20 20"
          />
          <circle
            cx="10"
            cy="10"
            r="6"
          />
        </svg>
      </button>
      <hr
        class="c-fNKiiB c-fNKiiB-fKZlxR-orientation-vertical c-fNKiiB-ieFaPrQ-css"
      />
      <button
        aria-label="Light/Dark mode"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-PJLV"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7 14a2 2 0 1 1 0-4 2 2 0 0 1 0 4Z"
            fill-rule="evenodd"
          />
          <path
            d="M7 17A5 5 0 0 1 7 7h9a5 5 0 0 1 0 10H7Z"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;
